# cheat-loader-c-plus-plus

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cheat-store-decompressed.html  design-bundle2.tar  fix_path.ps1  vcpkg.json
backend/: .env.example  package-lock.json  package.json  tsconfig.json
backend/src/: index.ts
backend/src/config/: env.ts
backend/src/db/: pool.ts
backend/src/db/migrations/: 001_initial.sql  002_email_verification.sql  003_forum.sql  004_admin_role.sql  005_forum_permissions.sql  006_forum_profiles.sql  007_forum_reactions.sql  008_forum_notifications.sql  009_forum_conversations.sql  010_forum_moderation.sql  011_forum_search.sql
backend/src/middleware/: auth.ts  cors.ts  rateLimiter.ts  security.ts
backend/src/public/: 404.html  admin.html  conversation.html  conversations.html  forum.html  forum.js  index.html  loader.html  login.html  notifications.html  profile.html  register-success.html  store.html  thread.html
backend/src/routes/: admin.routes.ts  auth.routes.ts  forum.routes.ts  register.routes.ts  user-content.routes.ts  user.routes.ts
backend/src/scripts/: create-user.ts  migrate.ts
backend/src/services/: auth.service.ts  bookmark.service.ts  conversation.service.ts  forum.service.ts  moderation.service.ts  notification.service.ts  permission.service.ts  profile.service.ts  reaction.service.ts  search.service.ts  token.service.ts  totp.service.ts  user.service.ts  watch.service.ts
backend/src/utils/: argon2.ts  crypto.ts
backend/src/views/forum/: categories.ejs  edit-post.ejs  layout.ejs  new-thread.ejs  thread.ejs  threads.ejs
backend/systemd/: auth-api.service
cheat-loader/: README.md
cheat-loader/chats/: chat1.md
cheat-loader/project/: .thumbnail  Cheat Forum.dc.html  Cheat Loader.dc.html  Cheat Profile.dc.html  Cheat Store.dc.html  Cheat Thread.dc.html
config/: config.example.json
deploy/: Caddyfile  Caddyfile.example  SERVER-SETUP.md  ufw-rules.sh
docs/: registration-deploy.md  registration-website.md  security-review.md
src/: App.cpp  App.h  main.cpp
src/auth/: AuthService.cpp  AuthService.h  SessionManager.cpp  SessionManager.h  TokenStore.cpp  TokenStore.h
src/core/: Config.cpp  Config.h  Logger.cpp  Logger.h  SecureMemory.h
src/models/: ApiResponse.h  AuthTokens.h  LoginRequest.h  User.h
src/network/: ApiClient.cpp  ApiClient.h  HttpTypes.h  TlsConfig.cpp  TlsConfig.h
src/ui/: UIManager.cpp  UIManager.h  WebViewManager.cpp  WebViewManager.h
src/ui/components/: Button.h  InputField.h  Notification.h
src/ui/theme/: Theme.h
src/ui/views/: DashboardView.cpp  DashboardView.h  LoginView.cpp  LoginView.h  TwoFAView.cpp  TwoFAView.h
src/ui/web/: bridge.js  loader.html
src/util/: Base64.h  JsonHelpers.h
